# yogamudrasystemm

./: Dockerfile  README.md
cpp/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
eval/: accuracy_report.txt  ground_truth.csv
logs/: sample_session.csv  sample_session_summary.txt
python/: evaluate.py  pose_detector.py  requirements.txt  test_detectors.py
scripts/: fetch_deps.sh  run_local.sh
shared/: output.json
yoga-mudra-system/cpp/: main.cpp
